--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-KLA Layout Page
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>QtMind</title>
+<meta name="keywords" content="takla keyboard layout analyzer Qt C++" />
+<meta name="description" content="Takla, a keyboard layout analyzer" />
+<link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
+<link rel="icon" type="image/png" href="images/icon.png">
+<script type='text/javascript' src='js/jquery.min.js'></script>
+<script type='text/javascript' src='js/jquery.scrollTo-min.js'></script>
+<script type='text/javascript' src='js/jquery.localscroll-min.js'></script>
+<script type="text/javascript">
+$(document).ready(function () {
+$.localScroll();
+});
+</script> 
+<link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" /> 
+<script type="text/JavaScript" src="js/slimbox2.js"></script> 
+
+</head>
+
+<body>
+<div id="background">
+<div id="templatemo_wrapper">
+
+	<div id="templatemo_header">
+		<a href="http://omidnikta.github.io/takla/index.html" title="southwest wall papers" class="templatemo_link"  target="_blank"></a>
+		<div id="site_title">
+			<a rel="nofollow" href="http://omidnikta.github.io/takla/index.html">Keyboard Layout Analyzer</a>
+		</div>		
+	</div> <!-- END of templatemo_header-->
+	
+	<div id="templatmeo_menu">
+		<ul>
+			<li><a href="#home" class="home">Home</a></li>
+			<li><a href="#services" class="services">Screenshots</a></li>
+<!--			<li><a href="#portfolio" class="portfolio">Downlod</a></li>-->
+<!--			<li><a href="#about" class="about">Translate</a></li>-->
+		</ul>
+	</div> <!-- END of templatmeo_menu-->
+	
+	<div id="templatemo_main">
+		<div id="home" class="main_box">
+			<h1>Takla</h1>
+			<p>Takla is a keyboard layout and text analyzer.</p>
+
+		</div> <!-- END of home -->
+
+		<div id="services" class="main_box">
+			<h1> Screenshots</h1>
+			<ul id="gallery">
+				<li><a href="images/takla1.png" rel="lightbox[portfolio]"><img src="images/takla1.png" alt="image 1" /></a></li>
+				<li><a href="images/takla2.png" rel="lightbox[portfolio]"><img src="images/takla2.png" alt="image 2" /></a></li>
+				<li><a href="images/takla3.png" rel="lightbox[portfolio]"><img src="images/takla3.png" alt="image 3" /></a></li>
+				<li><a href="images/takla4.png" rel="lightbox[portfolio]"><img src="images/takla4.png" alt="image 4" /></a></li>
+				<li><a href="images/takla5.png" rel="lightbox[portfolio]"><img src="images/takla5.png" alt="image 5" /></a></li>
+				<li><a href="images/takla6.png" rel="lightbox[portfolio]"><img src="images/takla6.png" alt="image 6" /></a></li>
+				<li><a href="images/takla7.png" rel="lightbox[portfolio]"><img src="images/takla7.png" alt="image 7" /></a></li>
+				<li><a href="images/takla8.png" rel="lightbox[portfolio]"><img src="images/takla8.png" alt="image 8" /></a></li>
+				<li><a href="images/takla9.png" rel="lightbox[portfolio]"><img src="images/takla9.png" alt="image 9" /></a></li>
+			</ul>
+			<div class="cleaner"></div>
+			<div class="main_bottom"><a href="#templatemo_header"></a></div>
+			<div class="cleaner"></div>
+		</div> <!-- END of services --> 
+
+	</div>
+
+	<div id="templatemo_footer">
+		Copyright © 2013 Omid Nikta<br /> <a rel="nofollow" href="https://github.com/omidnikta/takla">Takla</a> By <a href="https://github.com/omidnikta" rel="nofollow" target="_parent" title="free templates">Omid Nikta</a>
+	</div>
+
+</div><!-- END of templatemo_wrapper -->
+</div><!-- END of background -->
+</body>
+</html>
