--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>QtMind</title>
+<title>Takla</title>
 <meta name="keywords" content="takla keyboard layout analyzer Qt C++" />
 <meta name="description" content="Takla, a keyboard layout analyzer" />
 <link href="css/templatemo_style.css" rel="stylesheet" type="text/css" />
